--- a/variation-jam/index.html
+++ b/variation-jam/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+  <!-- Corrected viewport meta -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-  <title>I HAVE NO TITLE :( Please deduct a grade from me.</title>
+  <title>Variation Jam</title>
 
-  <!-- CSS stylesheet(s) -->
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <!-- CSS stylesheet -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
-  <!-- Library script(s) -->
+  <!-- p5.js libraries from CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
 
-  <!-- p5.min.js is the main p5 library -->
-  <script src="js/libraries/p5.min.js"></script>
-  <!-- p5.sound.min.js allows us to use sound -->
-  <script src="js/libraries/p5.sound.min.js"></script>
-
-  <!-- My script(s) -->
+  <!-- Your script -->
   <script src="js/script.js"></script>
 </head>
-
 <body>
-  <!-- HTML would go here if needed. -->
+  <!-- Canvas and sketch will be injected by p5.js -->
 </body>
-
 </html>
