--- a/variation-jam/index.html
+++ b/variation-jam/index.html
@@ -5,7 +5,7 @@
   <!-- Corrected viewport meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-  <title>Variation Jam</title>
+  <title>Variation Jam 1</title>
 
   <!-- CSS stylesheet -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
