Add wand menu and heart page, update assets
Introduced menu.html for wand selection and heart.html for Wand 1. Updated Wand images and added menu.js for menu functionality. Applied consistent dark background styling to HTML files.

--- a/variation-jam/index2.html
+++ b/variation-jam/index2.html
@@ -10,6 +10,11 @@
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+<style>
+        /* Page background color and base text color*/
+        body { background: #000000; color: #000000; }
+    </style>
+
   <!-- Library script(s) -->
 
   <!-- p5.min.js is the main p5 library -->
