--- a/variation-jam/heart.html
+++ b/variation-jam/heart.html
@@ -20,7 +20,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
 
   <!-- Your script -->
-  <script src="js/menu.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
   <!-- Canvas and sketch will be injected by p5.js -->
