started song variation
. Updated script_3.js to use the new image, simplified pupil movement, added a dynamic mouth, and changed the speech bubble text. Added song.html to load the updated script, and updated menu.html to link to the new page. Updated README to reflect asset changes and attribution.

--- a/variation-jam/menu.html
+++ b/variation-jam/menu.html
@@ -25,7 +25,7 @@
       <img class="wand" src="assets/images/Wand_2.png" alt="Wand 2">
       <div class="label">Wand 2</div>
     </a>
-    <a href="#" title="Wand 3">
+    <a href="song.html" title="Wand 3">
       <img class="wand" src="assets/images/Wand_3.png" alt="Wand 3">
       <div class="label">Wand 3</div>
     </a>
