Rename index2.html to yum.html and update link
Renamed variation-jam/index2.html to variation-jam/yum.html and updated the corresponding link in menu.html to reflect the new filename.

--- a/variation-jam/menu.html
+++ b/variation-jam/menu.html
@@ -21,7 +21,7 @@
       <img class="wand" src="assets/images/Wand_1.png" alt="Wand 1">
       <div class="label">Wand 1</div>
     </a>
-    <a href="index2.html" title="Wand 2">
+    <a href="yum.html" title="Wand 2">
       <img class="wand" src="assets/images/Wand_2.png" alt="Wand 2">
       <div class="label">Wand 2</div>
     </a>
